@@ -1,27 +1,50 @@
 <?php
+
 defined('BASEPATH') OR exit('No direct script access allowed');
 
 class Portfolio extends Application {
 
-	/**
-	 * Index Page for this controller.
-	 *
-	 * Maps to the following URL
-	 * 		http://example.com/index.php/welcome
-	 *	- or -
-	 * 		http://example.com/index.php/welcome/index
-	 *	- or -
-	 * Since this controller is set as the default controller in
-	 * config/routes.php, it's displayed at http://example.com/
-	 *
-	 * So any other public methods not prefixed with an underscore will
-	 * map to /index.php/welcome/<method_name>
-	 * @see https://codeigniter.com/user_guide/general/urls.html
-	 */
-	public function index()
+     function __construct()
 	{
-	$this->data['pagebody'] = 'portfolio';
-        $this->data['content'] = $this->parser->parse('portfolio', $this->data, true);
-        $this->render();
+		parent::__construct();
 	}
+    
+   	public function index()
+	{
+                $this->data['dropdown'] = $this->players();
+                $this->data['playerportfolio'] = $this->portfo();
+                $this->data['content'] = $this->parser->parse('portfolio', $this->data, true);
+                $this->render();
+	}
+    
+    private function portfo()
+        {
+            $this->load->model('Portfo');
+            
+          
+            $rows = array();
+            foreach ($this->Portfo->get_portfolio() as $record)
+            {
+                $rows[] = (array) $record;
+            }
+            $this->data['transactions'] = $rows;
+            
+            return $this->parser->parse('playerportfolio', $this->data, true);
+        }
+        
+    private function players()
+        {
+            $this->load->model('Portfo');
+            
+          
+            $rows = array();
+            foreach ($this->Portfo->get_players() as $record)
+            {
+                $rows[] = (array) $record;
+            }
+            $this->data['players'] = $rows;
+            
+            return $this->parser->parse('dropdown', $this->data, true);
+        }
+        
 }
