@@ -1,8 +1,3 @@
 	<h1>Welcome to portfolio!</h1>
-
-	<div id="body">
-		<p>This is the base homepage m8</p>
-
-		<p>If you are exploring CodeIgniter for the very first time, you should start by reading the <a href="user_guide/">User Guide</a>.</p>
-	</div>
-
+        {playerportfolio}
+        {dropdown}
