@@ -1,0 +1,8 @@
+ 
+    <select onChange="window.location.href=this.value">
+            <option>Select a Player</option>
+            {players}            
+                <option value="/portfolio?name={Player}">{Player}</option>
+            {/players}
+    </select>
+ 
