@@ -1,0 +1,13 @@
+
+<div id="players">
+    <p>Player Portfolio:</p>
+    <table>
+    {transactions}
+    <tr>
+        <td>{Player}</td>
+        <td>{Trans}</td>
+    </tr>
+    {/transactions}
+    </table>
+    
+</div>
